buildpacks/dotnet/src/snapshots/multiple_root_directory_solution_files_error.snap
---
source: buildpacks/dotnet/src/errors.rs
---
[0;31m! Multiple .NET solution files[0m
[0;31m![0m
[0;31m! The root directory contains multiple .NET solution files: `foo.sln`, `bar.sln`.[0m
[0;31m![0m
[0;31m! When there are multiple solution files in the root directory, you must specify[0m
[0;31m! which one to use.[0m
[0;31m![0m
[0;31m! For more information, see:[0m
[0;31m! https://github.com/heroku/buildpacks-dotnet#solution-file[0m
