buildpacks/dotnet/src/snapshots/parse_buildpack_configuration_invalid_solution_file_error.snap
---
source: buildpacks/dotnet/src/errors.rs
---
[0;31m! Invalid solution file configuration[0m
[0;31m![0m
[0;31m! The configured solution file `MyApp.txt` must have a `.sln` or `.slnx` extension.[0m
[0;31m![0m
[0;31m! For more information, see:[0m
[0;31m! https://github.com/heroku/buildpacks-dotnet#solution-file[0m
