buildpacks/dotnet/src/snapshots/parse_global_json_error.snap
---
source: buildpacks/dotnet/src/errors.rs
---
- [1;36mDebug info[0m
  - expected value at line 1 column 1

[0;31m! Invalid `global.json` file[0m
[0;31m![0m
[0;31m! We can’t parse the root directory `global.json` file because it contains invalid JSON.[0m
[0;31m![0m
[0;31m! Use the debug information above to troubleshoot and retry your build.[0m
